--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Special+Elite&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Special+Elite&display=swap');
+@import url('./slider.css');
 
 :root{
     --cor-primaria: #000000;
     --cor-secundaria: #F6F6F6;
     --cor-terciaria: #FF0077;
     --cor-hover: #111111;
-    --fonte-primaria: 'Krona One', sans-serif;
-    --fonte-secundaria: 'Montserrat', sans-serif;
+    --fonte-primaria: "Chakra Petch", sans-serif;
+    --fonte-secundaria: "Inter", sans-serif;
 }
 
 *{
@@ -41,7 +43,7 @@ body {
 .apresentacao{
     padding: 5% 15%;
     display: flex;
-    align-items: center;
+    align-items:flex-start;
     justify-content: space-between;
     gap: 82px
 }
@@ -54,7 +56,7 @@ body {
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -79,6 +81,10 @@ body {
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 1.5rem; 
+}
+
+.apresentacao__imagem{
+    border-radius: 50px;
 }
 
 .apresentacao__links__link{
@@ -118,7 +124,7 @@ body {
     padding: 1.5rem; 
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 1.5rem; 
+    font-size: 1.2rem; 
     font-weight: 400;
 }
 
